fixed one more spacing issues

--- a/02boxmodel/style.css
+++ b/02boxmodel/style.css
@@ -1,11 +1,11 @@
 html {
-  background: url(https://wi-images.condecdn.net/image/B1NZW376pxM/crop/1620/f/space_11.jpg)
-  center center fixed; 
+  background: url(https://wi-images.condecdn.net/image/B1NZW376pxM/crop/1620/f/space_11.jpg) center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+
 /*body {
   background-color: black;
 }
@@ -14,8 +14,9 @@ html {
 h1 {
   color: aliceblue;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  font-size: 100px;  
+  font-size: 100px;
 }
+
 * {
   box-sizing: border-box;
 }
@@ -52,7 +53,7 @@ h1 {
 .planet.earth {
   height: 480px;
   width: 480px;
-  }
+}
 
 .earth .crust {
   border-color: azure;
